kubernetes-templating/cert-manager/test_letsencrypt/depl_qua.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kuard","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kuard"}},"template":{"metadata":{"labels":{"app":"kuard"}},"spec":{"containers":[{"image":"gcr.io/kuar-demo/kuard-amd64:1","imagePullPolicy":"Always","name":"kuard","ports":[{"containerPort":8080}]}]}}}}
  creationTimestamp: "2023-02-28T18:00:02Z"
  generation: 1
  name: kuard
  namespace: default
  resourceVersion: "39147"
  uid: c9a864ad-3607-44ef-baa0-1886eca3d9ea
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kuard
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-02-28T18:00:05Z"
    lastUpdateTime: "2023-02-28T18:00:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-02-28T18:00:02Z"
    lastUpdateTime: "2023-02-28T18:00:05Z"
    message: ReplicaSet "kuard-698d8986d6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
