kubernetes-templating/cert-manager/test_letsencrypt/svc_qua.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"kuard","namespace":"default"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"kuard"}}}
  creationTimestamp: "2023-02-28T18:00:10Z"
  name: kuard
  namespace: default
  resourceVersion: "39150"
  uid: c3d3cba0-445b-4965-874d-6246eb3edb65
spec:
  clusterIP: 10.43.24.136
  clusterIPs:
  - 10.43.24.136
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
