kubernetes-templating/cert-manager/test_letsencrypt/ingress_qua.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "traefik"    
    kubernetes.io/tls-acme: "true"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: "nip-issuer"
spec:
  tls:
  - hosts:
    - 150.230.151.237.nip.io 
    secretName: kuard-nip-tls
  rules:
  - host: 150.230.151.237.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
